--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,7 @@
     <version>1.0.0</version>
   </parent>
   <artifactId>kafka-connect-transform-archive</artifactId>
-  <version>0.1.0-SNAPSHOT</version>
+  <version>0.2.0-SNAPSHOT</version>
   <name>kafka-connect-transform-archive</name>
   <url>https://github.com/jcustenborder/kafka-connect-transform-archive</url>
   <inceptionYear>2017</inceptionYear>
@@ -72,6 +72,18 @@
       <groupId>com.github.jcustenborder.kafka.connect</groupId>
       <artifactId>connect-utils-testing-data</artifactId>
       <version>[0.2.33,0.2.1000)</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.kafka</groupId>
+      <artifactId>connect-runtime</artifactId>
+      <version>${kafka.version}</version>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+      <version>4.12</version>
       <scope>test</scope>
     </dependency>
   </dependencies>
