--- a/pom.xml
+++ b/pom.xml
@@ -83,6 +83,12 @@
       <version>[0.2.33,0.2.1000)</version>
       <scope>test</scope>
     </dependency>
+      <dependency>
+          <groupId>org.apache.commons</groupId>
+          <artifactId>commons-lang3</artifactId>
+          <version>3.12.0</version>
+          <scope>compile</scope>
+      </dependency>
   </dependencies>
   <build>
     <plugins>
